deployment/k3s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
        - name: worker-app
          image: boldo42/rain-dms-ocr-worker:latest
          imagePullPolicy: Always
