deployment/k3s/scaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-processor
  namespace: default
  labels:
    app: queue-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-processor
  template:
    metadata:
      labels:
        app: queue-processor
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: queue-processor

      containers:
        - name: worker-app
          image: boldo42/rain-dms-ocr-worker:latest
          imagePullPolicy: Always

          securityContext:
            allowPrivilegeEscalation: false

          resources:
            requests:
              cpu: "2"
              memory: 2Gi
            limits:
              cpu: "4"
              memory: 4Gi

          volumeMounts:
            - name: cert-vol
              mountPath: /certs
              readOnly: true

      volumes:
        - name: cert-vol
          secret:
            secretName: external-server-cert
